Api response now contains source country, request now requires isHigh boolean, cleanup